Adding the admin search
