# Server/Api/Services/Interfaces/IHistoryService.cs
@@ -1,0 +1,11 @@
+﻿using DataAccess;
+
+namespace Api.Services.Interfaces;
+
+public interface IHistoryService
+{
+    Task<Historylog> CreateLog(string content);
+    Task<List<Historylog>> GetAllLogsAsync();
+    Task DeleteLog(string logId);
+    
+}
